# VGGS

./: .gitignore  README.md  pyproject.toml  render.py  train.py  train_optuna.py
arguments/: __init__.py
configs/: dtu.yaml  tnt_10views.yaml  tnt_20views.yaml  tnt_5views.yaml
docs/: python312-jetson.md
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
scripts/: generate_vggt_priors.py  optuna_quality.py  prepare_tnt_submission.py  render_tnt.py  run_dtu.py  run_tnt.py  run_tnt_optuna.py  sweep_quality.py  tnt_official_pipeline.py
scripts/eval_dtu/: eshanl.py  evaluate_single_scene.py
scripts/tnt_eval/: registration.py  run.py
submodules/diff-plane-rasterization/: setup.py
submodules/diff-plane-rasterization/diff_plane_rasterization.egg-info/: PKG-INFO
submodules/simple-knn/: setup.py  simple_knn.cu
utils/: camera_utils.py  feat_utils.py  general_utils.py  loss_utils.py  point_utils.py
